--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@supabase/supabase-js": "^2.83.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.20",
